Added Step 2 Button Disabling
Step 2 button now is only enabled when there is both folders to merge and a save location is set.

--- a/app_style.qss
+++ b/app_style.qss
@@ -80,6 +80,10 @@ QPushButton:pressed {
   background-color: #daf2ee;
 }
 
+QPushButton:disabled {
+  background-color: #a7a7a7;
+}
+
 QPushButton#step2button {
   margin-bottom: 9em;
 }
