Added Threads for Compression and OCR
Compression and OCR now have their own threads that get started once the previous thread sends the complete signal. Progress bar functions properly for all processes.

--- a/app_style.qss
+++ b/app_style.qss
@@ -85,7 +85,13 @@ QPushButton:disabled {
 }
 
 QPushButton#step2button {
-  margin-bottom: 3em;
+  margin-bottom: 1em;
+}
+
+QProgressBar {
+  margin-left: 50px;
+  min-height: 50px;
+  max-height: 50px;
 }
 
 QPushButton#cachebutton {
