Changed Save Path Display to LineEdit (Done Page)
Changed the reminder of save location from a QLabel to a QLineEdit so that the user is able to copy/paste the save path.

--- a/app_style.qss
+++ b/app_style.qss
@@ -66,6 +66,18 @@ QLabel#savelocation {
   font-weight: bold;
 }
 
+QLineEdit {
+  font-size: 18px;
+  background-color: white;
+  color: #253042;
+  min-height: 1.2em;
+  max-height: 1.2em;
+  margin-left: 1em;
+  margin-right: 1em;
+  padding-left: 1em;
+  padding-right: 1em;
+}
+
 QWidget#page {
   background-color: ghostwhite;
 }
