Added Icon and Made all Path Labels QLineEdits
Added app icon. Also made remaining Qlabels for paths (Step 1 and Step 2 buttons results) QLineEdits so that they are copiable.

--- a/app_style.qss
+++ b/app_style.qss
@@ -54,7 +54,8 @@ QLabel#step1desc {
 }
 
 QLabel#parentconf {
-  max-height: 15em;
+  min-height: 13.5em;
+  max-height: 13.5em;
 }
 
 QLabel#step2desc {
